fix horizontal scroll block Cover

--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,6 +1,8 @@
 .cover__overlay{
     background-color: rgb(16, 18, 18, 0.3);
-    height: 740px;
+    width: 100%;
+    height: 63vw;
+
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -12,8 +14,9 @@
     background-color: rgb(16, 18, 18, 0.8);
 }
 
-@media screen and (max-width: 1184px) {
+@media screen and (min-width: 1280px) {
     .cover__overlay{
-        height: 63vw;
+        height: 740px;
+        width: 1184px;
     }
 } 
