--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -18,7 +18,7 @@
         line-height: 1.09;
     }
 }
-@media  screen and (max-width: 425px) {
+@media  screen and (max-width: 600px) {
     .cover__title{
         margin: 33px auto 0;
         width: 90vw;
