--- a/blocks/page/__content/page__content.css
+++ b/blocks/page/__content/page__content.css
@@ -1,10 +1,11 @@
 .page__content{
-    margin: 0 auto;
-    max-width: 1280px;
+    margin: 0;
+    width: 100%;
     box-sizing: border-box;
 }
-@media screen  and (max-width: 1280px) {
+@media screen  and (min-width: 1280px) {
     .page__content{
-        width: 100%;
+        width: 1280px;
+        margin: 0 auto;
     }
 }
