--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,6 @@
   .page{
     margin: 0;
     padding: 0;
-    width: auto;
     background-color:  #2A2C2F;
     font-family: "Inter", "Arial", sans-serif;
     -moz-osx-font-smoothing: grayscale;
